  that they check for a non-zero exit code. They can opt in to more specific
  error handling using the additional exit codes mentioned above, in order to
  distinguish between different kinds of startup errors.

* arangoimport now supports the option --remove-attribute on type JSON as well.
  Before it was restricted to TSV and CSV only.

* Fixed BTS-851: "Could not fetch the applier state of: undefined".

* Removed internal JavaScript dependencies "expect.js", "media-typer" and
  "underscore". We recommend always bundling your own copy of third-party
  modules as all previously included third-party modules are now considered
  deprecated and may be removed in future versions of ArangoD
* APM-84: Added option to spill intermediate AQL query results from RAM to
  disk when their size exceeds certain thresholds. Currently the only AQL
  operation that can make use of this is the SortExecutor (AQL SORT operation
  without using a LIMIT). Further AQL executor types will be supported in
  future releases.

  Spilling over query results from RAM to disk is off by default and currently
  in an experimental stage. In order to opt in to the feature, it is required
  to set the following startup option `--temp.intermediate-results-path`.
  The directory specified here must not be located underneath the instance's
  database directory.
  When this startup option is specified, ArangoDB assumes ownership of that
  directory and will wipe its contents on startup and shutdown. The directory
  can be placed on ephemeral storage, as the data stored inside it is there
  only temporarily, while the instance is running. It does not need to be
  persisted across instance restarts and does not need to be backed up.

  When a directory is specified via the startup option, the following
  additional configuration options can be used to control the threshold
  values for spilling over data:

  * `--temp.intermediate-results-capacity`: maximum on-disk size (in bytes)