@@ -218,6 +218,10 @@ class StaticStrings {
   static std::string const XContentTypeOptions;
   static std::string const XArangoFrontend;
   static std::string const XArangoQueueTimeSeconds;
+  static std::string const ContentSecurityPolicy;
+  static std::string const Pragma;
+  static std::string const Expires;
+  static std::string const HSTS;
 
   // mime types
   static std::string const MimeTypeDump;
