@@ -485,12 +485,15 @@ devel
 * arangoimport now supports the option --remove-attribute on type JSON as well.
   Before it was restricted to TSV and CSV only.
 
+* Added CSP recommended headers to Aardvaark app for better security.
+
 * Fixed BTS-851: "Could not fetch the applier state of: undefined".
 
 * Removed internal JavaScript dependencies "expect.js", "media-typer" and
   "underscore". We recommend always bundling your own copy of third-party
   modules as all previously included third-party modules are now considered
   deprecated and may be removed in future versions of ArangoD
+
 * APM-84: Added option to spill intermediate AQL query results from RAM to
   disk when their size exceeds certain thresholds. Currently the only AQL
   operation that can make use of this is the SortExecutor (AQL SORT operation
